intentando solucionar el lector